5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1668_2971.log
== TEST (2019-04-15 18:12:49) 
-- CODE:
j= float(input("taxa de juros: "))
ap= float(input"valor do apatamento: ")
q0= 1500
t= 36
val= q0*((1+j)**t)
print(val)
-- ERROR:
File "XXXX", line 2
    ap= float(input"valor do apatamento: ")
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:13:00) 
-- CODE:
j= float(input("taxa de juros: "))
ap= float(input("valor do apatamento: ")
q0= 1500
t= 36
val= q0*((1+j)**t)
print(val)
-- ERROR:
File "XXXX", line 3
    q0= 1500
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:13:12) 
-- CODE:
j= float(input("taxa de juros: "))
ap= float(input("valor do apatamento: ")
q0=1500
t= 36
val= q0*((1+j)**t)
print(val)
-- ERROR:
File "XXXX", line 3
    q0=1500
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:13:21) 
-- CODE:
j= float(input("taxa de juros: "))
ap= float(input("valor do apatamento: ")
q=1500
t= 36
val= q*((1+j)**t)
print(val)
-- ERROR:
File "XXXX", line 3
    q=1500
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:13:43) 
-- CODE:
j= float(input("taxa de juros: "))
ap= float(input("valor do apatamento: ")
q= float(1500)
t= 36
val= q*((1+j)**t)
print(val)
-- ERROR:
File "XXXX", line 3
    q= float(1500)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:13:55) 
-- CODE:
j= float(input("taxa de juros: "))
ap= float(input("valor do apatamento: ")
q=
t= 36
val= q*((1+j)**t)
print(val)
-- ERROR:
File "XXXX", line 3
    q=
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:13:59) 
-- CODE:
j= float(input("taxa de juros: "))
ap= float(input("valor do apatamento: ")
q=1
t= 36
val= q*((1+j)**t)
print(val)
-- ERROR:
File "XXXX", line 3
    q=1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:14:32) 
-- CODE:
j= float(input("taxa de juros: "))
ap= float(input("valor do apatamento: ")
q=1
t= 36
val= q*((1+j)**t)
print(round(val, 2)
-- ERROR:
File "XXXX", line 3
    q=1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:14:41) 
-- CODE:
j= float(input("taxa de juros: "))
ap= float(input("valor do apatamento: ")
q=1
t= 36
val= 1*((1+j)**t)
print(round(val, 2)
-- ERROR:
File "XXXX", line 3
    q=1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:14:54) 
-- CODE:
j= float(input("taxa de juros: "))
ap= float(input("valor do apatamento: ")
q=1
t= 36
val= 1*((1+j)**t)
print(round(val, 2)
-- ERROR:
File "XXXX", line 3
    q=1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:14:58) 
-- CODE:
j= float(input("taxa de juros: "))
ap= float(input("valor do apatamento: ")
q==1
t= 36
val= 1*((1+j)**t)
print(round(val, 2)
-- ERROR:
File "XXXX", line 3
    q==1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:15:04) 
-- CODE:
j= float(input("taxa de juros: "))
ap= float(input("valor do apatamento: ")
t= 36
val= 1*((1+j)**t)
print(round(val, 2)
-- ERROR:
File "XXXX", line 3
    t= 36
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:15:24) 
-- CODE:
j= float(input("taxa de juros: "))
ap= float(input("valor do apatamento: ")
val= 1*((1+j)**1)
print(round(val, 2)
-- ERROR:
File "XXXX", line 3
    val= 1*((1+j)**1)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:15:32) 
-- CODE:
j= float(input("taxa de juros: "))
ap= float(input("valor do apatamento: ")
val= 1*((1+j)**1)
print(round(val, 2)
-- EXECUTION TIME:
0.133956
-- ERROR:
  File "/home/codebench/codes/1668/2971/main.py", line 3
    val= 1*((1+j)**1)
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:15:33) 
-- CODE:
j= float(input("taxa de juros: "))
ap= float(input("valor do apatamento: ")
val= 1*((1+j)**1)
print(round(val, 2)
-- ERROR:
File "XXXX", line 3
    val= 1*((1+j)**1)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:24:08) 
-- CODE:
j= float(input("taxa de juros: "))
ap= float(input("valor do apatamento: ")
q=1.5000
-- ERROR:
File "XXXX", line 3
    q=1.5000
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:24:13) 
-- CODE:
j= float(input("taxa de juros: "))
ap= float(input("valor do apatamento: ")
q=1.500
-- ERROR:
File "XXXX", line 3
    q=1.500
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:24:22) 
-- CODE:
j= float(input("taxa de juros: "))
ap= float(input("valor do apatamento: ")
q=1500
-- ERROR:
File "XXXX", line 3
    q=1500
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:24:30) 
-- CODE:
j= float(input("taxa de juros: "))
ap= float(input("valor do apatamento: ")
q= 1500
-- ERROR:
File "XXXX", line 3
    q= 1500
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:25:03) 
-- CODE:
j = float(input("taxa de juros: "))
ap = float(input("valor do apatamento: ")
q = 1500
t = 36
-- ERROR:
File "XXXX", line 3
    q = 1500
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:25:21) 
-- CODE:
j = float(input("taxa de juros: "))
ap = float(input("valor do apatamento: ")
q = 1500
t = 36
-- ERROR:
File "XXXX", line 3
    q = 1500
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:25:47) 
-- CODE:
j = float(input("taxa de juros: "))
ap = float(input("valor do apatamento: "))
q = 1500
t = 36
-- ERROR:
File "XXXX", line 3
    q = 1500
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:27:03) 
-- CODE:
j = float(input("taxa de juros: "))
ap = float(input("valor do apatamento: "))
q = 1500
t = 36
vf= q * ((1+j)**t)
-- ERROR:
File "XXXX", line 3
    q = 1500
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:28:44) 
-- CODE:
j = float(input("taxa de juros: "))
ap = float(input("valor do apatamento: "))
q = 1500
t = 36
vf= q * ((1+j)**t)
if(vf>=ap):
	print("sim")
else:
	print("não")
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:29:22) 
-- CODE:
j = float(input("taxa de juros: "))
ap = float(input("valor do apatamento: "))
q = 1500
t = 36
vf= q * ((1+j)**t)
if(vf>=ap):
	print("sim")
else:
	print("nao")
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:29:35) 
-- CODE:
j = float(input("taxa de juros: "))
ap = float(input("valor do apatamento: "))
q = 1500
t = 36
vf= q * ((1+j)**t)
if(vf>=ap):
	print("sim")
else:
	print("nao")
-- EXECUTION TIME:
0.133827
-- TEST CASE 1:
---- input:
0.29
125250
---- correct output:
14365502.76
Sim
---- user output:
sim
-- TEST CASE 2:
---- input:
0.15
300000
---- correct output:
229727.78
Nao
---- user output:
nao
-- TEST CASE 3:
---- input:
0.2
150000
---- correct output:
1063202.81
Sim
---- user output:
sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:29:44) 
-- CODE:
j = float(input("taxa de juros: "))
ap = float(input("valor do apatamento: "))
q = 1500
t = 36
vf= q * ((1+j)**t)
if(vf>=ap):
	print("Sim")
else:
	print("Nao")
-- OUTPUT:
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:29:55) 
-- CODE:
j = float(input("taxa de juros: "))
ap = float(input("valor do apatamento: "))
q = 1500
t = 36
vf= q * ((1+j)**t)
if(vf>=ap):
	print("Sim")
else:
	print("Nao")
-- EXECUTION TIME:
0.20705
-- TEST CASE 1:
---- input:
0.29
125250
---- correct output:
14365502.76
Sim
---- user output:
Sim
-- TEST CASE 2:
---- input:
0.15
300000
---- correct output:
229727.78
Nao
---- user output:
Nao
-- TEST CASE 3:
---- input:
0.2
150000
---- correct output:
1063202.81
Sim
---- user output:
Sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:30:43) 
-- CODE:
j = float(input("taxa de juros: "))
ap = float(input("valor do apatamento: "))
q = 1500
t = 36
vf= round(q * ((1+j)**t), 2)
if(vf>=ap):
	print("Sim")
else:
	print("Nao")
-- OUTPUT:
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:30:53) 
-- CODE:
j = float(input("taxa de juros: "))
ap = float(input("valor do apatamento: "))
q = 1500
t = 36
vf= round(q * ((1+j)**t), 2)
if(vf>=ap):
	print("Sim")
else:
	print("Nao")
-- EXECUTION TIME:
0.148112
-- TEST CASE 1:
---- input:
0.29
125250
---- correct output:
14365502.76
Sim
---- user output:
Sim
-- TEST CASE 2:
---- input:
0.15
300000
---- correct output:
229727.78
Nao
---- user output:
Nao
-- TEST CASE 3:
---- input:
0.2
150000
---- correct output:
1063202.81
Sim
---- user output:
Sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:33:11) 
-- CODE:
j = float(input("taxa de juros: "))
ap = float(input("valor do apatamento: "))
q = 1500
t = 36
vf= (q * ((1+j)**t)
if(vf>=ap):
	print(round(vf, 2))
	print("Sim")
else:
	print(round(vf, 2))
	print("Nao")
-- ERROR:
File "XXXX", line 6
    if(vf>=ap):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:33:33) 
-- CODE:
j = float(input("taxa de juros: "))
ap = float(input("valor do apatamento: "))
q = 1500
t = 36
vf= (q * ((1+j)**t)
if(vf>=ap):
	print(round(vf, 2))
	print("Sim")
else:
	print(round(vf, 2))
	print("Nao")
-- ERROR:
File "XXXX", line 6
    if(vf>=ap):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:33:40) 
-- CODE:
j = float(input("taxa de juros: "))
ap = float(input("valor do apatamento: "))
q = 1500
t = 36
vf= (q * ((1+j)**t)
if(vf>=ap):
	print("Sim")
else:
	print(round(vf, 2))
	print("Nao")
-- ERROR:
File "XXXX", line 6
    if(vf>=ap):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:33:56) 
-- CODE:
j = float(input("taxa de juros: "))
ap = float(input("valor do apatamento: "))
q = 1500
t = 36
vf= (q * ((1+j)**t)
if(vf>=ap):
	print("Sim")
else:
	print(round(vf, 2))
	print("Nao")
-- ERROR:
File "XXXX", line 6
    if(vf>=ap):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:34:15) 
-- CODE:
j = float(input("taxa de juros: "))
ap = float(input("valor do apatamento: "))
q = 1500
t = 36
vf= (q * ((1+j)**t))
if(vf>=ap):
	print("Sim")
else:
	print(round(vf, 2))
	print("Nao")
-- OUTPUT:
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:34:29) 
-- CODE:
j = float(input("taxa de juros: "))
ap = float(input("valor do apatamento: "))
q = 1500
t = 36
vf= (q * ((1+j)**t))
if(vf>=ap):
	print("Sim")
else:
	print(round(vf, 2))
	print("Nao")
-- EXECUTION TIME:
0.19639
-- TEST CASE 1:
---- input:
0.29
125250
---- correct output:
14365502.76
Sim
---- user output:
Sim
-- TEST CASE 2:
---- input:
0.15
300000
---- correct output:
229727.78
Nao
---- user output:
229727.78
Nao
-- TEST CASE 3:
---- input:
0.2
150000
---- correct output:
1063202.81
Sim
---- user output:
Sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:34:52) 
-- CODE:
j = float(input("taxa de juros: "))
ap = float(input("valor do apatamento: "))
q = 1500
t = 36
vf= (q * ((1+j)**t))
if(vf>=ap):
	print(round(vf, 2))
	print("Sim")
else:
	print(round(vf, 2))
	print("Nao")
-- OUTPUT:
14365502.76
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:35:12) 
-- CODE:
j = float(input("taxa de juros: "))
ap = float(input("valor do apatamento: "))
q = 1500
t = 36
vf= (q * ((1+j)**t))
if(vf>=ap):
	print(round(vf, 2))
	print("Sim")
else:
	print(round(vf, 2))
	print("Nao")
-- EXECUTION TIME:
0.164403
-- TEST CASE 1:
---- input:
0.29
125250
---- correct output:
14365502.76
Sim
---- user output:
14365502.76
Sim
-- TEST CASE 2:
---- input:
0.15
300000
---- correct output:
229727.78
Nao
---- user output:
229727.78
Nao
-- TEST CASE 3:
---- input:
0.2
150000
---- correct output:
1063202.81
Sim
---- user output:
1063202.81
Sim
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
